--- a/src/nummerpladeogkortspil/FXML.fxml
+++ b/src/nummerpladeogkortspil/FXML.fxml
@@ -7,22 +7,23 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nummerpladeogkortspil.FXMLDocumentController">
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="nummerpladeogkortspil.FXMLController">
    <children>
-      <TabPane prefHeight="200.0" prefWidth="320.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
           <Tab text="Nummerplade">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextField fx:id="txtField" layoutX="14.0" layoutY="52.0" />
-                        <Button fx:id="btnTjek" layoutX="201.0" layoutY="52.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Tjek" />
-                        <Label fx:id="lblresult" layoutX="68.0" layoutY="106.0" wrapText="true" />
+                        <Label fx:id="lblOutput" layoutX="146.0" layoutY="201.0" wrapText="true" />
+                        <Button fx:id="btnTjek" layoutX="308.0" layoutY="108.0" mnemonicParsing="false" onAction="#ButtonActionHandler" text="Tjek" />
+                        <TextField fx:id="txtFld" layoutX="72.0" layoutY="83.0" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Spillekort">
+          <Tab text="Kortspil">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </content>
