--- a/src/nummerpladeogkortspil/FXML.fxml
+++ b/src/nummerpladeogkortspil/FXML.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="nummerpladeogkortspil.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nummerpladeogkortspil.FXMLController">
    <children>
       <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -25,7 +26,14 @@
           </Tab>
           <Tab text="Kortspil">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextArea fx:id="txtOutputArea" layoutX="207.0" layoutY="37.0" prefHeight="200.0" prefWidth="200.0" />
+                        <Button fx:id="btnBland" layoutX="92.0" layoutY="285.0" mnemonicParsing="false" onAction="#btnBlandButtonActionHandler" text="Bland" />
+                        <RadioButton fx:id="rb50" layoutX="201.0" layoutY="289.0" mnemonicParsing="false" onAction="#RB50ButtonActionHandler" text="50" />
+                        <RadioButton fx:id="rb100" layoutX="335.0" layoutY="289.0" mnemonicParsing="false" onAction="#RB100ButtonActionHandler" text="100" />
+                        <RadioButton fx:id="rb250" layoutX="452.0" layoutY="289.0" mnemonicParsing="false" onAction="#RB250ButtonActionHandler" text="250" />
+                     </children></AnchorPane>
             </content>
           </Tab>
         </tabs>
