--- a/src/flashingtext/FXMLDocument.fxml
+++ b/src/flashingtext/FXMLDocument.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="163.0" prefWidth="308.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lektion.pkg11.flashingtext.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="163.0" prefWidth="308.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="flashingtext.FXMLDocumentController">
    <children>
       <Label fx:id="funLabel" layoutX="2.0" layoutY="20.0" prefHeight="50.0" prefWidth="306.0" text="Welcome">
          <font>
